# Fake-News-Final

./: .gitignore  README.md  call_model_api.ipynb  docker-compose.yml  embedding_generation.ipynb  model_training.ipynb  pyproject.toml
app/: main.py
