[tool.poetry]
name = "fake news final"
version = "0.1.0"
description = ""
authors = ["MartaQL"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
numpy = "~1.25"
nltk = "^3.8.1"
gensim = "^4.3.2"
scikit-learn = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
