[tool.poetry]
name = "fake news final"
version = "0.1.0"
description = ""
authors = ["MartaQL"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mlflow = "^2.14.0"
threadpoolctl = "^3.5.0"
streamlit = "^1.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
